// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrNodeComponent Component mapping resolution should render children when no mapping provided 1`] = `
<DocumentFragment>
  <b />
</DocumentFragment>
`;

exports[`BrNodeComponent Component mapping resolution should render mapped component when mapping exists 1`] = `
<DocumentFragment>
  <a>
    <b />
  </a>
</DocumentFragment>
`;
